2008-05-30  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/amanda.h, common-src/bsd-security.c,
	  common-src/bsdtcp-security.c, common-src/bsdudp-security.c,
	  common-src/dgram.c, common-src/dgram.h, common-src/krb5-security.c,
	  common-src/security-util.c, common-src/security-util.h,
	  common-src/sockaddr-util.c, common-src/sockaddr-util.h,
	  common-src/stream.c, common-src/util.c, common-src/util.h,
	  restore-src/amidxtaped.c, server-src/amindexd.c: add sockaddr_union,
	  change all relevant functions to use it, to avoid aliasing violations

2008-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (lookup_keyword): Use temporary variable.
	* installcheck/Amanda_Config.pl:  Check insentivity of -/_ in amanda
					  keyword.
	* installcheck/Installcheck/Config.pm: Adjust to make the subsection
					       inheritance work.

2008-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Send properties from dump_dle to
				      application plugin.

2008-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: New *-RECOVER scripts.
	* application-src/script-email.pl: Add new *-RECOVER scripts.
	* application-src/generic-script.pl: Add new *-RECOVER scripts.
	* application-src/amstar.c: Fix.
	* application-src/amgtar.c: Fix.
	* recover-src/amrecover.c: Add a global dump_dle variable.
	* recover-src/extract_list.c: Call run_client_scripts for *-RECOVER
				      scripts.
	* recover-src/amrecover.h: Add an extern dump_dle variable.
	* recover-src/set_commands.c: Send to amindexd the DLE command.
	* server-src/amindexd.c: Handle the DLE command.
	* server-src/server_util.c: Add *-RECOVER scripts, they can't be
				    executed on server.
	* server-src/diskfile.c (xml_scripts): Add *-RECOVER scripts.
	* common-src/amfeatures.h: New fe_amrecover_dle amfeature.
	* common-src/amfeatures.c (am_init_feature_set): Add fe_amrecover_dle.
	* common-src/amxml.c: Add *-RECOVER scripts.